need 3rd project

--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
 								<li><a href="https://github.com/shawnpatel96/Game-of-Life" class="button">Github Repo</a></li>
 							</ul>
 						</div>
-						<div class="col-4 col-12-medium">
+						<!-- <div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<h3>Magna feugiat lorem</h3>
 							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</section>
