--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/Game of life.JPG" alt="" /></span>
-							<h3>Conways Game of Life</h3>
+							<h3>Conway's Game of Life</h3>
 							<p>This version of The Game of Life was created in memory of the late Jon Conway.</p>
 							<p>
 								This version of The Game of Life has built in user controls, including custom and random seed generation, pausing and continuing the simulation. As well as a generation counter. 
