fixed grammar issues

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 							<header class="major">
 								<h2 class>I'm a detailed oriented, software engineer passionate about writing clean, efficient, and scalable code.</h2>
 							</header>
-							<p>Hi, I'm Shawn and I'm a web developer with a passion for evolving technologies. I joined a full stacks web development program through Lambda School. During this time I've been able to excel at all technical aspects of the program, as well as demonstrate leadership qualities and understand a variety of concepts.</p> 
-							<p>I love learning new and better ways to create clean, scalable, efficient code. I consider our field an ongoing education, and I'm always excited to work with those who are willing to share their knowledge as much as my drive to learn and adapt.	
+							<p>Hi, I'm Shawn and I'm a web developer with a passion for evolving technologies. I joined a full stacks web development program through Lambda School. During this time I've been able to excel at all technical aspects of the program, as well as demonstrate leadership qualities and understanding a variety of concepts.</p> 
+							<p>I love learning new and better ways to create clean, scalable, and efficient code. I consider my field an ongoing education, and I'm always excited to work with those who are willing to share their knowledge as much as my drive to learn and adapt.	
 							</p> 
-							<p>My primary objective is to utilize my knowledge in order to grow and find success as a full stacks developer at your company.</p>
+							<p>My primary objective is to utilize my knowledge in order to grow and find success as a full stacks developer.</p>
 							
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
@@ -79,10 +79,10 @@
 							<header class="major">
 								<h2>Some technologies I've worked with:</h2>
 							</header>
-							<p>I am a creative problem solver. I can build fullstack web applications using HTML, CSS, Javascript, React, Redux, Node.Js, Express, PostgreSQL. </p>
+							<p>I am a creative problem solver. I can build full-stack web applications using HTML, CSS, Javascript, React, Redux, Node.Js, Express, PostgreSQL. </p>
 							
-							<p>I use proven design patterns and frameworks to build the back-end architecture for user model, router and authentication.  </p>
-							<p>These are just some of the technologies I know and I am always open to learning new technology stacks to better suite my objectives. </p>
+							<p>I use proven design patterns and frameworks to build back-end architecture for the user model, router and user authentication.  </p>
+							<p>These are just some of the technologies I know and I am always open to learning new technology stacks to better suit my objectives. </p>
 						</div>
 					</div>
 				</div>
@@ -101,7 +101,7 @@
 							<h3>Refresh</h3>
 							<p>Refresh is a healthy habit app designed for students and staff. Our app exists to promote simple but powerful healthy
 								habits that will transform individuals into strong, energetic and productive beings.</p>
-								<p>Web app build on MERN(Mango, Express, React, Node), utilizing PostgreSQL instead. Redux was utilized to handle state across both user and admin sides of Refresh.</p>
+								<p>Web app built on MERN(Mango, Express, React, Node), utilizing PostgreSQL instead. Redux was utilized to handle state across both user and admin sides of Refresh.</p>
 							<ul class="actions special">
 								<li><a href="https://www.refresh-app.com/" class="button">Deployed Link</a></li>
 								<li><a href="https://github.com/shawnpatel96/refresh-be" class="button">Github Repo</a></li>
