added 3rd project

--- a/index.html
+++ b/index.html
@@ -124,14 +124,15 @@
 								<li><a href="https://github.com/shawnpatel96/Game-of-Life" class="button">Github Repo</a></li>
 							</ul>
 						</div>
-						<!-- <div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/Capture121.JPG" alt="" /></span>
+							<h3>GroundUp</h3>
+							<p>Due to COVID-19, many people's lives were uprooted and thrown out of balance. GroundUp aims to help individuals regain their balance. We use revolutionary technologies to help restart your life, from the ground up.</p>
+							<p>GroundUp is an application that consumes a job market API and a housing API to display results tailored to user parameters. </p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="#" class="button">Gitup Repo</a></li>
 							</ul>
-						</div> -->
+						</div>
 					</div>
 				</div>
 			</section>
