--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 							<header class="major">
 								<h2 class>I'm a detailed oriented, software engineer passionate about writing clean, efficient, and scalable code.</h2>
 							</header>
-							<p>Hi, I'm Shawn and I'm a web developer with a passion for evolving technologies. I joined a full stacks web development program through Lambda School. During this time I've been able to excel at all technical aspects of the program, as well as demonstrate leadership qualities and understanding a variety of concepts.</p> 
+							<p>Hi, I'm Shawn and I'm a web developer with a passion for evolving technologies. I joined a Full Stacks Web development program through Lambda School. During this time I've been able to excel at all technical aspects of the program, as well as demonstrate leadership qualities and understanding a variety of concepts.</p> 
 							<p>I love learning new and better ways to create clean, scalable, and efficient code. I consider my field an ongoing education, and I'm always excited to work with those who are willing to share their knowledge as much as my drive to learn and adapt.	
 							</p> 
-							<p>My primary objective is to utilize my knowledge in order to grow and find success as a full stacks developer.</p>
+							<p>From Production Manager to Full Stack Developer, my primary objective is to utilize my knowledge in order to grow and find success as a Full Stacks Developer.</p>
 							
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
